--- a/index.html
+++ b/index.html
@@ -10,63 +10,76 @@
 </head>
 
 <body>
-  
+
 
     <div class="form">
-        <table>
-            <tr>
-                <td>Name:</td>
-                <td><input type="text" name="" id=""></td>
-            </tr> 
-            <tr>
-                <td>Email:</td>
-                <td><input type="email" name="" id=""></td>
-            </tr> 
-            <tr>
-                <td>Gender:</td>
-                <td><input type="radio" name="gen" value="male">Male
-                    <input type="radio" name="gen" value="female">Female
-                </td>
-            </tr> 
-            <tr>
-                <td>Hobbies:</td>
-                <td>
-                    <input type="checkbox" name="coding">Coding
-                    <input type="checkbox" name="dancing">Dancing
-                    <input type="checkbox" name="singing">Singing
-                </td>
-            </tr>
-            <tr>
-                <td>Age:</td>
-                <td>
-                    <input type="number" name="">
-                </td>
-            </tr>
-            <tr>
-                <td>State:</td>
-                <td>
-                    <select name="">
-                        <option value="" disabled selected>select state</option>
+        <form action="">
+            <table>
+                <tr>
+                    <td><label>Name:</label></td>
+                    <td><input type="text" name="" id=""></td>
+                </tr>
+                <tr>
+                    <td><label>Email:</label></td>
+                    <td><input type="email" name="" id=""></td>
+                </tr>
+                <tr>
+                    <td><label>Gender:</label></td>
+                    <td><input type="radio" name="gen" value="male">Male
+                        <input type="radio" name="gen" value="female">Female
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Hobbies:</label></td>
+                    <td>
+                        <input type="checkbox" name="coding">Coding
+                        <input type="checkbox" name="dancing">Dancing
+                        <input type="checkbox" name="singing">Singing
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Age:</label></td>
+                    <td>
+                        <input type="number" name="">
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>DOB:</label></td>
+                    <td><input type="date" name="dob" id=""></td>
+                </tr>
+                <tr>
+                    <td><label>Country:</label></td>
+                    <td><select name="" id="">
+                            <option value="" disabled selected>select country</option>
 
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>City:</td>
-                <td>
-                    <select>
-                        <option value="" disabled selected>cities</option>
-                    </select>
-                </td>
-            </tr> 
+                        </select></td>
+                </tr>
+                <tr>
+                    <td><label>State:</label></td>
+                    <td>
+                        <select name="">
+                            <option value="" disabled selected>select state</option>
 
-            <tr>
-                <td>Action:</td>
-                <td>
-                    <input type="submit" value="submit" style="background-color: cornflowerblue; font-size: 20px;">
-                </td>
-            </tr>
-        </table>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>City:</label></td>
+                    <td>
+                        <select>
+                            <option value="" disabled selected>select cities</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td><label>Action:</label></td>
+                    <td>
+                        <input type="submit" value="submit" style="background-color: cornflowerblue; font-size: 20px;">
+                    </td>
+                </tr>
+            </table>
+        </form>
     </div>
 </body>
 
