worked on 2nd point

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo1</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    
 </head>
 
 <body>
@@ -80,7 +80,29 @@
                 </tr>
             </table>
         </form>
+    </div> <br>
+    <div>
+
+
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Gender</th>
+                <th>Hobbies</th>
+                <th>Age</th>
+                <th>DOB</th>
+                <th>Country</th>
+                <th>State</th>
+                <th>City</th>
+            </tr>
+            <tbody id="tbl">
+                
+            </tbody>
+        </table> 
     </div>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
