--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo1</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <body>
@@ -49,7 +49,7 @@
                 </tr>
                 <tr>
                     <td><label>Country:</label></td>
-                    <td><select name="" id="">
+                    <td><select id="countries">
                             <option value="" disabled selected>select country</option>
 
                         </select></td>
@@ -57,7 +57,7 @@
                 <tr>
                     <td><label>State:</label></td>
                     <td>
-                        <select name="">
+                        <select id="states">
                             <option value="" disabled selected>select state</option>
 
                         </select>
@@ -66,7 +66,7 @@
                 <tr>
                     <td><label>City:</label></td>
                     <td>
-                        <select>
+                        <select id="cities">
                             <option value="" disabled selected>select cities</option>
                         </select>
                     </td>
@@ -97,9 +97,9 @@
                 <th>City</th>
             </tr>
             <tbody id="tbl">
-                
+
             </tbody>
-        </table> 
+        </table>
     </div>
 
     <script src="main.js"></script>
