worked on 6th point

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <div class="form">
-
+        <h3 id="error" style="color: red;"></h3>
         <table>
             <form id="myform">
                 <tr>
@@ -79,7 +79,7 @@
                         <div id="addData">
                             <input type="submit" value="submit"
                                 style="background-color: cornflowerblue; font-size: 20px;">
-                                <input type="reset" value="Reset">
+                            <input type="reset" value="Reset">
                         </div> <br>
                         <div id="upData" style="display:none">
                             <input type="button" value="Update">
