--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo1</title>
+    <title>pr</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-
 
     <div class="form">
         <h3 id="error" style="color: red;"></h3>
@@ -93,6 +92,8 @@
         </table>
 
     </div> <br>
+    <input type="text" id="srname" title="Type in a name">
+    <input type="button" value="serch" onclick="myFunction()">
     <div>
 
 
