worked on 8th point

--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
         </table>
 
     </div> <br>
-    <input type="text" id="srname" title="Type in a name">
+    <input type="text" id="srname">
     <input type="button" value="serch" onclick="myFunction()">
+    <select name="" id="">
+        <option value="acending">acending</option>
+        <option value="descending">descending</option>
+    </select>
     <div>
 
 
