--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 <body>
 
     <div class="form">
-        <h3 id="error" style="color: red;"></h3>
         <table>
             <form id="myform">
                 <tr>
                     <td><label>Name:</label></td>
-                    <td><input type="text" name="name" id="name"></td>
+                    <td><input type="text" name="name" id="name"> <span id="nameerror" style="color: red;"></span></td>
                 </tr>
                 <tr>
                     <td><label>Email:</label></td>
-                    <td><input type="email" name="email" id="email"></td>
+                    <td><input type="email" name="email" id="email"> <span id="emailerror" style="color: red;"></span>
+                    </td>
                 </tr>
                 <tr>
                     <td><label>Gender:</label></td>
                     <td><input type="radio" name="gen" value="male" id="male">Male
                         <input type="radio" name="gen" value="female" id="female">Female
+                        <span id="generror" style="color: red;"></span>
                     </td>
                 </tr>
                 <tr>
@@ -35,24 +36,19 @@
                         <input type="checkbox" name="coding" value="coding" id="ch1">Coding
                         <input type="checkbox" name="dancing" value="dancing" id="ch2">Dancing
                         <input type="checkbox" name="singing" value="singing" id="ch3">Singing
-                    </td>
-                </tr>
-                <tr>
-                    <td><label>Age:</label></td>
-                    <td>
-                        <input type="number" name="age" id="age">
+                        <span id="hoberror" style="color: red;"></span>
                     </td>
                 </tr>
                 <tr>
                     <td><label>DOB:</label></td>
-                    <td><input type="date" name="dob" id="dob"></td>
+                    <td><input type="date" name="dob" id="dob"><span id="doberror" style="color: red;"></span></td>
                 </tr>
                 <tr>
                     <td><label>Country:</label></td>
                     <td><select id="countries">
                             <option value="" disabled selected>select country</option>
 
-                        </select></td>
+                        </select><span id="conerror" style="color: red;"></span></td>
                 </tr>
                 <tr>
                     <td><label>State:</label></td>
@@ -61,6 +57,7 @@
                             <option value="" disabled selected>select state</option>
 
                         </select>
+                        <span id="stateerror" style="color: red;"></span>
                     </td>
                 </tr>
                 <tr>
@@ -69,6 +66,7 @@
                         <select id="cities">
                             <option value="" disabled selected>select cities</option>
                         </select>
+                        <span id="cityerror" style="color: red;"></span>
                     </td>
                 </tr>
 
@@ -93,8 +91,9 @@
 
     </div> <br>
     <input type="text" id="srname">
-    <input type="button" value="serch" onclick="myFunction()">
-    <select name="" id="">
+    <input type="button" value="serch" onclick="searchData()">
+    <select name="" id="sort_tbl" onchange="sort_table()">
+        <option value="" disabled selected>sort</option>
         <option value="acending">acending</option>
         <option value="descending">descending</option>
     </select>
@@ -107,7 +106,6 @@
                 <th>Email</th>
                 <th>Gender</th>
                 <th>Hobbies</th>
-                <th>Age</th>
                 <th>DOB</th>
                 <th>Country</th>
                 <th>State</th>
@@ -121,7 +119,17 @@
         </table>
     </div>
 
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+
+    <script src="staticData.js"></script>
+    <script src="AddData.js"></script>
+    <script src="viewData.js"></script>
+    <script src="EditData.js"></script>
+    <script src="DeleteData.js"></script>
+    <script src="SearchData.js"></script>
+    <script src="Validation.js"></script>
+    <script src="Dropdown.js"></script>
+    <script src="SortTable.js"></script>
 </body>
 
 </html>
