--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo1</title>
+    <title>pr</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -76,7 +76,7 @@
                         <div id="addData">
                             <input type="submit" value="submit"
                                 style="background-color: cornflowerblue; font-size: 20px;">
-                            <input type="reset" value="Reset">
+                            <input type="reset" value="Reset" onclick="ClearErrors()">
                         </div> <br>
                         <div id="upData" style="display:none">
                             <input type="button" value="Update">
